kubernetes/platform/backrest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backrest
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  labels:
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: v1.36
