kubernetes/platform/backrest/backup-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backup-test
  namespace: backrest
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: backup-test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backup-test
    spec:
      containers:
        - name: hold-volume
          image: docker.io/library/busybox:1.37.0
          command:
            - sleep
            - infinity
          resources:
            requests:
              cpu: 1m
              memory: 2Mi
            limits:
              cpu: 10m
              memory: 8Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65534
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: data
              mountPath: /data
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: backup-test-data
