kubernetes/platform/backrest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backrest
  namespace: backrest
spec:
  selector:
    app.kubernetes.io/name: backrest
  ports:
    - name: http
      port: 9898
      targetPort: http
